<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".presentation.add.AddFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_user" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondNameAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_name_user" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_user"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/add_user" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>